# visioncv-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pylintrc  pyproject.toml
api/: di.py  routes.py
application/: generate_cv.py  upload_cv.py  user_cv.py
application/dtos/: form_dto.py
domain/: cv.py  cv_generator_service.py  cv_repository.py  data_formatter_service.py  stt_service.py  suggestions_service.py
infrastructure/: gpt_data_formatter_service.py  gpt_suggestions_service.py  mongodb_cv_repository.py  pdf_cv_generator_service.py  txt_cv_generator_service.py  whisper_stt_service.py
infrastructure/templates/: cv.html
static/: cv.txt
