[tool.poetry]
name = "visioncv-backend"
version = "0.1.0"
description = ""
authors = ["Adrephos <adrephos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
pylint = "^3.2.7"
pre-commit = "^3.8.0"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
pdfkit = "^1.0.0"
fastapi-clerk-auth = "^0.0.5"
pymongo = {extras = ["srv"], version = "^4.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
